--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "last 2 Chrome versions"
   ],
   "dependencies": {
+    "@material-ui/core": "^4.9.8",
+    "@material-ui/icons": "^4.9.1",
     "@reach/router": "^1.3.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
