--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "last 2 Chrome versions"
   ],
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "@material-ui/core": "^4.9.8",
     "@material-ui/icons": "^4.9.1",
     "@reach/router": "^1.3.3",
+    "apollo-boost": "^0.4.7",
+    "graphql": "^14.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
